# zk-battleship

./: Cargo.toml  README.md
src/: main.rs
src/game/: battleship.rs  field.rs  mod.rs  ship.rs
src/zkp/: battleship_verification.rs  mod.rs  types.rs
